# ipython-profile

./: .gitignore  LICENSE  README.md  ipython_profile.py  pyproject.toml
